Improve cookie handling and navbar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,5 @@ services:
             - './src:/simple-login'
         links:
             - mysql
+        environment:
+            SECRET_KEY: 6YENpJ5pyq
